Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.8.1 (MM/DD/YYYY):
	Pidgin:
	* Fix Conversation->Add on AIM and MSN.

	libpurple:
	* media: Actually use the specified TCP port from the TURN configuration to
	  create a TCP relay candidate.

	Plugins:
	* The Evolution Integration plugin compiles again.

version 2.8.0 (06/07/2011):
	General:
	* Implement simple silence suppression for voice calls, preventing
	  wasted bandwidth for silent periods during a call. (Jakub Adam)
	  (half of #13180)
	* Added the DigiCert High Assurance CA-3 intermediate CA, needed for
	  validation of the Facebook XMPP interface's certificate.
	* Removed the QQ protocol plugin.  It hasn't worked in a long time and
	  isn't being maintained, therefore we no longer want it.

	Pidgin:
	* Duplicate code cleanup.  (Gabriel Schulhof) (#10599)
	* Voice/Video call window adapts correctly to adding or removing
	  streams on the fly. (Jakub Adam) (half of #13535)
	* Don't cancel an ongoing call when rejecting the addition of a
	  stream to the existing call. (Jakub Adam) (#13537)
	* Pidgin plugins can now override tab completion and detect clicks on
	  usernames in the chat userlist. (kawaii.neko) (#12599)
	* Fix the tooltip being destroyed when it is full of information and
	  cover the mouse (dliang) (#10510)

	libpurple:
	* media: Allow obtaining active local and remote candidates. (Jakub
	  Adam) (#11830)
	* media: Allow getting/setting video capabilities. (Jakub Adam) (half
	  of #13095)
	* Simple Silence Suppression is optional per-account. (Jakub Adam)
	  (half of #13180)
	* Fix purple-url-handler being unable to find an account.
	* media: Allow adding/removing streams on the fly. (Jakub Adam)
	  (half of #13535)
	* Support new connection states in NetworkManager 0.9. (Dan Williams)
	  (#13505)
	* When removing a buddy, delete the pounces associated with it.
	  (Kartik Mohta) (#1131)
	* media: Allow libpurple and plugins to set SDES properties for RTP